k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mern-alb
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    # alb.ingress.kubernetes.io/subnets: "subnet-0aa439b4ddafcca10,subnet-0b95df318219145ca,subnet-0ccca36474902829a"
spec:
  ingressClassName: alb
  rules:
    - host: crud.ahadalichowdhury.online
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: crud-be
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: crud-fe
                port:
                  number: 80
